ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlas-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: ip10-20-182-243-node1-80.bulutbilisimciler.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: atlas-frontend-service
            port:
              number: 80
